--- a/SmartHome/SmartHome.cbp
+++ b/SmartHome/SmartHome.cbp
@@ -37,7 +37,7 @@
 				<ExtraCommands>
 					<Add after="avr-objcopy -R .eeprom -R .fuse -R .lock -R .signature -O ihex $(TARGET_OUTPUT_FILE) $(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).hex" />
 					<Add after="avr-objcopy --no-change-warnings -j .eeprom --change-section-lma .eeprom=0 -O ihex $(TARGET_OUTPUT_FILE) $(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).eep" />
-					<Add after='&quot;C:\Program Files (x86)\Arduino\hardware\tools\avr\bin\avrdude&quot; -C&quot;C:\Program Files (x86)\Arduino\hardware\tools\avr\etc\avrdude.conf&quot; -v -patmega2560 -cwiring -PCOM9 -b115200 -D -Uflash:w:bin\Release\SmartHome.elf bin\Release\SmartHome.hex' />
+					<Add after='&quot;C:\Program Files (x86)\Arduino\hardware\tools\avr\bin\avrdude&quot; -C&quot;C:\Program Files (x86)\Arduino\hardware\tools\avr\etc\avrdude.conf&quot; -v -patmega2560 -cwiring -PCOM3 -b115200 -D -Uflash:w:bin\Release\SmartHome.elf bin\Release\SmartHome.hex' />
 				</ExtraCommands>
 			</Target>
 			<Environment>
@@ -64,20 +64,25 @@
 		<Unit filename="HWInputs.c">
 			<Option compilerVar="CPP" />
 		</Unit>
-		<Unit filename="HWInputs.h" />
 		<Unit filename="HWOutputs.c">
 			<Option compilerVar="CPP" />
 		</Unit>
 		<Unit filename="Inputs.h" />
+		<Unit filename="Lights.c">
+			<Option compilerVar="CPP" />
+		</Unit>
+		<Unit filename="Lights.h" />
 		<Unit filename="Logic.c">
 			<Option compilerVar="CPP" />
 		</Unit>
 		<Unit filename="Logic.h" />
 		<Unit filename="Outputs.h" />
-		<Unit filename="SWInputs.c" />
-		<Unit filename="SWInputs.h" />
-		<Unit filename="SWOutputs.c" />
-		<Unit filename="SWOutputs.h" />
+		<Unit filename="SWInputs.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="SWOutputs.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="SmartHome.c">
 			<Option compilerVar="CPP" />
 		</Unit>
@@ -109,23 +114,37 @@
 		<Unit filename="arduino/USBDesc.h" />
 		<Unit filename="arduino/Udp.h" />
 		<Unit filename="arduino/WCharacter.h" />
-		<Unit filename="arduino/WInterrupts.c" />
+		<Unit filename="arduino/WInterrupts.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="arduino/WMath.cpp" />
 		<Unit filename="arduino/WString.cpp" />
 		<Unit filename="arduino/WString.h" />
 		<Unit filename="arduino/abi.cpp" />
 		<Unit filename="arduino/binary.h" />
-		<Unit filename="arduino/hooks.c"/>
+		<Unit filename="arduino/hooks.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="arduino/main.cpp" />
 		<Unit filename="arduino/new.cpp" />
 		<Unit filename="arduino/new.h" />
 		<Unit filename="arduino/pins_arduino.h" />
-		<Unit filename="arduino/wiring.c" />
-		<Unit filename="arduino/wiring_analog.c" />
-		<Unit filename="arduino/wiring_digital.c" />
+		<Unit filename="arduino/wiring.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="arduino/wiring_analog.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="arduino/wiring_digital.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="arduino/wiring_private.h" />
-		<Unit filename="arduino/wiring_pulse.c" />
-		<Unit filename="arduino/wiring_shift.c" />
+		<Unit filename="arduino/wiring_pulse.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="arduino/wiring_shift.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Extensions>
 			<code_completion />
 			<envvars />
