--- a/SmartHome/SmartHome.cbp
+++ b/SmartHome/SmartHome.cbp
@@ -14,6 +14,7 @@
 				<Option compiler="avr-gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add option="-DARDUINO=100" />
 					<Add directory="arduino" />
 				</Compiler>
 				<Linker>
@@ -32,12 +33,13 @@
 				<Option compiler="avr-gcc" />
 				<Compiler>
 					<Add option="-Os" />
+					<Add option="-DARDUINO=100" />
 					<Add directory="arduino" />
 				</Compiler>
 				<ExtraCommands>
 					<Add after="avr-objcopy -R .eeprom -R .fuse -R .lock -R .signature -O ihex $(TARGET_OUTPUT_FILE) $(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).hex" />
 					<Add after="avr-objcopy --no-change-warnings -j .eeprom --change-section-lma .eeprom=0 -O ihex $(TARGET_OUTPUT_FILE) $(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).eep" />
-					<Add after='&quot;C:\Program Files (x86)\Arduino\hardware\tools\avr\bin\avrdude&quot; -C&quot;C:\Program Files (x86)\Arduino\hardware\tools\avr\etc\avrdude.conf&quot; -v -patmega2560 -cwiring -PCOM3 -b115200 -D -Uflash:w:bin\Release\SmartHome.elf bin\Release\SmartHome.hex' />
+					<Add after='&quot;C:\Program Files (x86)\Arduino\hardware\tools\avr\bin\avrdude&quot; -C&quot;C:\Program Files (x86)\Arduino\hardware\tools\avr\etc\avrdude.conf&quot; -v -patmega2560 -cwiring -PCOM5 -b115200 -D -Uflash:w:bin\Release\SmartHome.elf bin\Release\SmartHome.hex' />
 				</ExtraCommands>
 			</Target>
 			<Environment>
@@ -61,6 +63,10 @@
 			<Add after="avr-objcopy --no-change-warnings -j .signature --change-section-lma .signature=0 -O ihex $(TARGET_OUTPUT_FILE) $(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).sig" />
 			<Add after="avr-objcopy --no-change-warnings -j .fuse --change-section-lma .fuse=0 -O ihex $(TARGET_OUTPUT_FILE) $(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).fuse" />
 		</ExtraCommands>
+		<Unit filename="Comfort.c">
+			<Option compilerVar="CPP" />
+		</Unit>
+		<Unit filename="Comfort.h" />
 		<Unit filename="HWInputs.c">
 			<Option compilerVar="CPP" />
 		</Unit>
@@ -122,6 +128,8 @@
 		<Unit filename="arduino/WString.h" />
 		<Unit filename="arduino/abi.cpp" />
 		<Unit filename="arduino/binary.h" />
+		<Unit filename="arduino/dht.cpp" />
+		<Unit filename="arduino/dht.h" />
 		<Unit filename="arduino/hooks.c">
 			<Option compilerVar="CC" />
 		</Unit>
