--- a/SmartHome/SmartHome.cbp
+++ b/SmartHome/SmartHome.cbp
@@ -39,7 +39,7 @@
 				<ExtraCommands>
 					<Add after="avr-objcopy -R .eeprom -R .fuse -R .lock -R .signature -O ihex $(TARGET_OUTPUT_FILE) $(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).hex" />
 					<Add after="avr-objcopy --no-change-warnings -j .eeprom --change-section-lma .eeprom=0 -O ihex $(TARGET_OUTPUT_FILE) $(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).eep" />
-					<Add after='&quot;C:\Program Files (x86)\Arduino\hardware\tools\avr\bin\avrdude&quot; -C&quot;C:\Program Files (x86)\Arduino\hardware\tools\avr\etc\avrdude.conf&quot; -v -patmega2560 -cwiring -PCOM5 -b115200 -D -Uflash:w:bin\Release\SmartHome.elf bin\Release\SmartHome.hex' />
+					<Add after='&quot;C:\Program Files (x86)\Arduino\hardware\tools\avr\bin\avrdude&quot; -C&quot;C:\Program Files (x86)\Arduino\hardware\tools\avr\etc\avrdude.conf&quot; -v -patmega2560 -cwiring -PCOM3 -b115200 -D -Uflash:w:bin\Release\SmartHome.elf bin\Release\SmartHome.hex' />
 				</ExtraCommands>
 			</Target>
 			<Environment>
@@ -89,6 +89,10 @@
 		<Unit filename="SWOutputs.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="Security.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Security.h" />
 		<Unit filename="SmartHome.c">
 			<Option compilerVar="CPP" />
 		</Unit>
