--- a/SmartHome/SmartHome.cbp
+++ b/SmartHome/SmartHome.cbp
@@ -67,6 +67,10 @@
 			<Option compilerVar="CPP" />
 		</Unit>
 		<Unit filename="Comfort.h" />
+		<Unit filename="DoorLock.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="DoorLock.h" />
 		<Unit filename="HWInputs.c">
 			<Option compilerVar="CPP" />
 		</Unit>
