--- a/SmartHome/SmartHome.cbp
+++ b/SmartHome/SmartHome.cbp
@@ -34,12 +34,13 @@
 				<Compiler>
 					<Add option="-Os" />
 					<Add option="-DARDUINO=100" />
+					<Add option="-DARDUINO_ARCH_AVR" />
 					<Add directory="arduino" />
 				</Compiler>
 				<ExtraCommands>
 					<Add after="avr-objcopy -R .eeprom -R .fuse -R .lock -R .signature -O ihex $(TARGET_OUTPUT_FILE) $(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).hex" />
 					<Add after="avr-objcopy --no-change-warnings -j .eeprom --change-section-lma .eeprom=0 -O ihex $(TARGET_OUTPUT_FILE) $(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).eep" />
-					<Add after='&quot;C:\Program Files (x86)\Arduino\hardware\tools\avr\bin\avrdude&quot; -C&quot;C:\Program Files (x86)\Arduino\hardware\tools\avr\etc\avrdude.conf&quot; -v -patmega2560 -cwiring -PCOM3 -b115200 -D -Uflash:w:bin\Release\SmartHome.elf bin\Release\SmartHome.hex' />
+					<Add after='&quot;C:\Program Files (x86)\Arduino\hardware\tools\avr\bin\avrdude&quot; -C&quot;C:\Program Files (x86)\Arduino\hardware\tools\avr\etc\avrdude.conf&quot; -v -patmega2560 -cwiring -PCOM8 -b115200 -D -Uflash:w:bin\Release\SmartHome.elf bin\Release\SmartHome.hex' />
 				</ExtraCommands>
 			</Target>
 			<Environment>
@@ -67,6 +68,10 @@
 			<Option compilerVar="CPP" />
 		</Unit>
 		<Unit filename="Comfort.h" />
+		<Unit filename="Doorlock.c">
+			<Option compilerVar="CPP" />
+		</Unit>
+		<Unit filename="Doorlock.h" />
 		<Unit filename="HWInputs.c">
 			<Option compilerVar="CPP" />
 		</Unit>
@@ -123,6 +128,9 @@
 		<Unit filename="arduino/Print.h" />
 		<Unit filename="arduino/Printable.h" />
 		<Unit filename="arduino/Server.h" />
+		<Unit filename="arduino/Servo.cpp" />
+		<Unit filename="arduino/Servo.h" />
+		<Unit filename="arduino/ServoTimers.h" />
 		<Unit filename="arduino/Stream.cpp" />
 		<Unit filename="arduino/Stream.h" />
 		<Unit filename="arduino/Tone.cpp" />
