--- a/SmartHome/SmartHome.cbp
+++ b/SmartHome/SmartHome.cbp
@@ -41,7 +41,7 @@
 				<ExtraCommands>
 					<Add after="avr-objcopy -R .eeprom -R .fuse -R .lock -R .signature -O ihex $(TARGET_OUTPUT_FILE) $(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).hex" />
 					<Add after="avr-objcopy --no-change-warnings -j .eeprom --change-section-lma .eeprom=0 -O ihex $(TARGET_OUTPUT_FILE) $(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).eep" />
-					<Add after='&quot;C:\Program Files (x86)\Arduino\hardware\tools\avr\bin\avrdude&quot; -C&quot;C:\Program Files (x86)\Arduino\hardware\tools\avr\etc\avrdude.conf&quot; -v -patmega2560 -cwiring -PCOM8 -b115200 -D -Uflash:w:bin\Release\SmartHome.elf bin\Release\SmartHome.hex' />
+					<Add after='&quot;C:\Program Files (x86)\Arduino\hardware\tools\avr\bin\avrdude&quot; -C&quot;C:\Program Files (x86)\Arduino\hardware\tools\avr\etc\avrdude.conf&quot; -v -patmega2560 -cwiring -PCOM3 -b115200 -D -Uflash:w:bin\Release\SmartHome.elf bin\Release\SmartHome.hex' />
 				</ExtraCommands>
 			</Target>
 			<Environment>
@@ -103,6 +103,10 @@
 			<Option compilerVar="CPP" />
 		</Unit>
 		<Unit filename="SmartHome.fuse" />
+		<Unit filename="WifiConn.c">
+			<Option compilerVar="CPP" />
+		</Unit>
+		<Unit filename="WifiConn.h" />
 		<Unit filename="arduino/Arduino.h" />
 		<Unit filename="arduino/CDC.cpp" />
 		<Unit filename="arduino/Client.h" />
