BEGIN Code::Blocks workaround

--- a/Comfort/SmartHome/SmartHomeWin.cbp
+++ b/Comfort/SmartHome/SmartHomeWin.cbp
@@ -38,6 +38,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="Comfort.h" />
+		<Unit filename="Doorlock.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Doorlock.h" />
 		<Unit filename="HWInputs.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -63,6 +67,13 @@
 		<Unit filename="SWOutputs.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="Security.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Security.h" />
+		<Unit filename="arduino/Servo.cpp" />
+		<Unit filename="arduino/Servo.h" />
+		<Unit filename="arduino/ServoTimers.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
