--- a/Comfort/SmartHome/SmartHome.cbp
+++ b/Comfort/SmartHome/SmartHome.cbp
@@ -34,12 +34,14 @@
 				<Compiler>
 					<Add option="-Os" />
 					<Add option="-DARDUINO=100" />
+					<Add option="-DARDUINO_ARCH_AVR" />
+					<Add option="-D__AVR_ATmega2560__" />
 					<Add directory="arduino" />
 				</Compiler>
 				<ExtraCommands>
 					<Add after="avr-objcopy -R .eeprom -R .fuse -R .lock -R .signature -O ihex $(TARGET_OUTPUT_FILE) $(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).hex" />
 					<Add after="avr-objcopy --no-change-warnings -j .eeprom --change-section-lma .eeprom=0 -O ihex $(TARGET_OUTPUT_FILE) $(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).eep" />
-					<Add after='&quot;C:\Program Files (x86)\Arduino\hardware\tools\avr\bin\avrdude&quot; -C&quot;C:\Program Files (x86)\Arduino\hardware\tools\avr\etc\avrdude.conf&quot; -v -patmega2560 -cwiring -PCOM5 -b115200 -D -Uflash:w:bin\Release\SmartHome.elf bin\Release\SmartHome.hex' />
+					<Add after='&quot;C:\Program Files (x86)\Arduino\hardware\tools\avr\bin\avrdude&quot; -C&quot;C:\Program Files (x86)\Arduino\hardware\tools\avr\etc\avrdude.conf&quot; -v -patmega2560 -cwiring -PCOM3 -b115200 -D -Uflash:w:bin\Release\SmartHome.elf bin\Release\SmartHome.hex' />
 				</ExtraCommands>
 			</Target>
 			<Environment>
@@ -67,6 +69,10 @@
 			<Option compilerVar="CPP" />
 		</Unit>
 		<Unit filename="Comfort.h" />
+		<Unit filename="Doorlock.c">
+			<Option compilerVar="CPP" />
+		</Unit>
+		<Unit filename="Doorlock.h" />
 		<Unit filename="HWInputs.c">
 			<Option compilerVar="CPP" />
 		</Unit>
@@ -89,10 +95,18 @@
 		<Unit filename="SWOutputs.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="Security.c">
+			<Option compilerVar="CPP" />
+		</Unit>
+		<Unit filename="Security.h" />
 		<Unit filename="SmartHome.c">
 			<Option compilerVar="CPP" />
 		</Unit>
 		<Unit filename="SmartHome.fuse" />
+		<Unit filename="WifiConn.c">
+			<Option compilerVar="CPP" />
+		</Unit>
+		<Unit filename="WifiConn.h" />
 		<Unit filename="arduino/Arduino.h" />
 		<Unit filename="arduino/CDC.cpp" />
 		<Unit filename="arduino/Client.h" />
@@ -105,12 +119,23 @@
 		<Unit filename="arduino/HardwareSerial_private.h" />
 		<Unit filename="arduino/IPAddress.cpp" />
 		<Unit filename="arduino/IPAddress.h" />
+		<Unit filename="arduino/Key.cpp" />
+		<Unit filename="arduino/Key.h" />
+		<Unit filename="arduino/Keypad.cpp" />
+		<Unit filename="arduino/Keypad.h" />
+		<Unit filename="arduino/LiquidCrystal_I2C.cpp" />
+		<Unit filename="arduino/LiquidCrystal_I2C.h" />
+		<Unit filename="arduino/Password.cpp" />
+		<Unit filename="arduino/Password.h" />
 		<Unit filename="arduino/PluggableUSB.cpp" />
 		<Unit filename="arduino/PluggableUSB.h" />
 		<Unit filename="arduino/Print.cpp" />
 		<Unit filename="arduino/Print.h" />
 		<Unit filename="arduino/Printable.h" />
 		<Unit filename="arduino/Server.h" />
+		<Unit filename="arduino/Servo.cpp" />
+		<Unit filename="arduino/Servo.h" />
+		<Unit filename="arduino/ServoTimers.h" />
 		<Unit filename="arduino/Stream.cpp" />
 		<Unit filename="arduino/Stream.h" />
 		<Unit filename="arduino/Tone.cpp" />
@@ -126,6 +151,8 @@
 		<Unit filename="arduino/WMath.cpp" />
 		<Unit filename="arduino/WString.cpp" />
 		<Unit filename="arduino/WString.h" />
+		<Unit filename="arduino/Wire.cpp" />
+		<Unit filename="arduino/Wire.h" />
 		<Unit filename="arduino/abi.cpp" />
 		<Unit filename="arduino/binary.h" />
 		<Unit filename="arduino/dht.cpp" />
@@ -137,6 +164,10 @@
 		<Unit filename="arduino/new.cpp" />
 		<Unit filename="arduino/new.h" />
 		<Unit filename="arduino/pins_arduino.h" />
+		<Unit filename="arduino/utility/twi.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="arduino/utility/twi.h" />
 		<Unit filename="arduino/wiring.c">
 			<Option compilerVar="CC" />
 		</Unit>
